--- a/public/css/register.css
+++ b/public/css/register.css
@@ -1,7 +1,9 @@
 .register {
-  width: 360px;
-  padding: 8% 0 0;
-  margin: auto;
+  height: 100%;
+  margin-left: 20%;
+  margin-right: 20%;
+  margin-top: 5%;
+  width: 60%;
 }
 .register__form {
   background: #ffffff;
